[workspace]
members = [
  "cli",
  "host",
  "polis",
  "wasm-test-vectors",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.65"
include_dir = "0.7.2"
wabt = "0.10.0"
wasmi = "0.8.0"

[workspace.dependencies.clap]
version = "4.0.8"
features = [
  "derive"
]
